Bug 82244 backout old patch r= radha sr=rpotts