docshell/base/nsWebShell.cpp
@@ -609,6 +609,8 @@ nsWebShell::LoadDocument(const char* aURL,
   return NS_OK;
 }
 
+//This functions is only called when a new charset is detected in loading a document. 
+//Its name should be changed to "CharsetReloadDocument"
 NS_IMETHODIMP
 nsWebShell::ReloadDocument(const char* aCharset,
                            nsCharsetSource aSource)
@@ -629,8 +631,7 @@ nsWebShell::ReloadDocument(const char* aCharset,
          muDV->SetHintCharacterSet(NS_ConvertASCIItoUCS2(aCharset).GetUnicode());
          muDV->SetHintCharacterSetSource((PRInt32)aSource);
          mCharsetReloadState = eCharsetReloadRequested;
-         // XXX: LOAD_HISTORY really means load from cache...
-         return Reload(LOAD_HISTORY);
+         return Reload(LOAD_FLAGS_CHARSET_CHANGE);
       }
     }
   }
